--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 		</div>
 		<div class="w3-left-align">
 		<br><br><strong><span>FAQ: </span></strong><span><br><strong>should the 
-			screen stay on during process?</strong><br>Yes. Otherwise it doesn’t 
+			screen stay on during process?</strong><br>Yes. Otherwise it doesnÂ’t 
 			work. So for long monitoring, connect the phone to a charger.<br>
 			<br><strong>Does it support other languages?</strong><br>We will add 
 			more languages but if your language is not on the list you can 
@@ -339,7 +339,7 @@
 			if anyone decided to use my Service, If you choose to use my Service, 
 			then you agree to the collection and use of information in relation 
 			to this policy.<br><strong>Information Collection and Use</strong><br>
-			we <span>don’t</span> collect any user data directly. We use third party services 
+			we <span>donÂ’t</span> collect any user data directly. We use third party services 
 			to report bugs and crashes and advertising and improving.<br>The app 
 			does use third party services that may collect information used to 
 			identify you.<br>Link to privacy policy of third party service 
@@ -364,7 +364,7 @@
 			<p>I want to inform you that whenever you use my Service, in a case 
 			of an error in the app I collect data and information (through third 
 			party products) on your phone called Log Data. This Log Data may 
-			include information such as your device Internet Protocol (“IP”) 
+			include information such as your device Internet Protocol (Â“IPÂ”) 
 			address, device name, operating system version, the configuration of 
 			the app when utilizing my Service, the time and date of your use of 
 			the Service, and other statistics. </p>
@@ -373,8 +373,8 @@
 			an anonymous unique identifier. These are sent to your browser from 
 			the website that you visit and are stored on your device internal 
 			memory. </p>
-			<p>This Service does not use these “cookies” explicitly. However, 
-			the app may use third party code and libraries that use “cookies” to 
+			<p>This Service does not use these Â“cookiesÂ” explicitly. However, 
+			the app may use third party code and libraries that use Â“cookiesÂ” to 
 			collection information and to improve their services.</p>
 			<p><strong>Service Providers</strong></p>
 			<p>I may employ third-party companies and individuals due to the 
